# tg

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  build.sh  test.sh  tg.cbp
.kdev4/: tg.kdev4
flex/: lex.yy.cc  test  tg.l
include/: csingleton.h  defs.h  defs.h~
src/: CMakeLists.txt  CMakeLists.txt~  CSVFile.cpp~  converters.h  csvfile.cpp  csvfile.h  csvfile.h~  eventlistener.h  eventlistener.h~  filereader.cpp  filereader.h  group.h  group.h~  identifier.h  json_file_handler.cpp  json_file_handler.cpp~  json_file_handler.h  json_file_handler.h~  main.cpp  main.cpp.orig  main.cpp~  pattern_match.h  pattern_match.h.orig  pattern_match.h~  project.h  project_file_handler.h  project_file_handler.h~  property.h  property.py  structs.h  tag.h  tagstruct.h  tagsystem.h  tagsystem.h~  tagtype.h  tg_config.h  tg_config.h.in  utils.h  utils.h.orig  utils.h~  (+2 more)
src/logic/: TODO.txt  structs.py  tagsystem.py  test.py  tg.py
src/logic/systems/: intouch101.py
src/systems/: intouch.cpp  intouch.cpp~  intouch.h  intouch.h~
